--- a/css/index.css
+++ b/css/index.css
@@ -71,6 +71,31 @@ p {
     margin: 0 auto;
 }
 
+header {
+    padding: 20px 0 20px;
+    width: 100%;
+    display: flex;
+    align-items: baseline;
+    justify-content: space-between;
+}
+
+nav {
+    width: 90%;
+}
+
+nav a {
+    color: black;
+    text-decoration: none;
+    padding: 0px 38px 0px;
+}
+
+.jumbo-home {
+    display: block;
+    width: 100%;
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+
 .top-content {
     display: flex;
     flex-wrap: wrap;
@@ -104,12 +129,42 @@ p {
 .middle-content .boxes .box {
     width: 12.5%;
     height: 100px;
-    background: black;
     margin: 20px 2.5%;
     color: white;
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+.box-1 {
+    background: teal;
+}
+.box-2 {
+    background: gold;
+}
+.box-3 {
+    background: cadetblue;
+}
+.box-4 {
+    background: coral;
+}
+.box-5 {
+    background: crimson;
+}
+.box-6 {
+    background: forestgreen;
+}
+.box-7 {
+    background: darkorchid;
+}
+.box-8 {
+    background: hotpink;
+}
+.box-9 {
+    background: indigo;
+}
+.box-10 {
+    background: dodgerblue;
 }
 
 .bottom-content {
